# GDELT

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: climate_request.json
schemas/: gdelt_news_dataset.schema.json
src/gdelt_news/: __init__.py  analysis.py  cli.py  client.py  models.py  normalize.py  scraper.py  tls.py  validate.py
tests/: test_cli.py  test_client.py  test_normalize.py  test_query_builder.py  test_scraper.py  test_tls.py  test_validate.py
