[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gdelt-news-module"
version = "0.1.0"
description = "Structured GDELT DOC 2.0 ingestion and normalization for downstream analytics."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Codex" }]
dependencies = ["certifi>=2024.0.0"]

[project.scripts]
gdelt-news = "gdelt_news.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
