[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gdelt-news-module"
version = "0.1.0"
description = "Structured GDELT DOC 2.0 ingestion and normalization for downstream analytics."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Jasper Neumann" }]
dependencies = ["certifi>=2024.0.0"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
gdelt-news = "gdelt_news.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
per-file-ignores = { "tests/*.py" = ["E402"] }
